RESOLVED FIXED198612
REGRESSION(244439): platform/mac/media/encrypted-media/fps-* tests are crashing
https://bugs.webkit.org/show_bug.cgi?id=198612
Summary REGRESSION(244439): platform/mac/media/encrypted-media/fps-* tests are crashing
Jer Noble
Reported 2019-06-06 09:32:43 PDT
REGRESSION(244439): platform/mac/media/encrypted-media/fps-* tests are crashing
Attachments
Patch (9.42 KB, patch)
2019-06-06 09:37 PDT, Jer Noble
no flags
Patch (9.42 KB, patch)
2019-06-06 13:31 PDT, Jer Noble
no flags
Patch for landing (9.38 KB, patch)
2019-06-14 12:27 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2019-06-06 09:33:24 PDT
Jer Noble
Comment 2 2019-06-06 09:37:17 PDT
Eric Carlson
Comment 3 2019-06-06 13:29:54 PDT
Comment on attachment 371503 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=371503&action=review > Source/WebCore/Modules/encryptedmedia/InitDataRegistry.cpp:135 > + if (psshBox.systemID() != CDMPrivateFairPlayStreaming::fairPlaySystemID()) { I think you want an “==“ here
Jer Noble
Comment 4 2019-06-06 13:31:52 PDT
Jer Noble
Comment 5 2019-06-14 12:27:27 PDT
Created attachment 372132 [details] Patch for landing
WebKit Commit Bot
Comment 6 2019-06-14 13:10:39 PDT
Comment on attachment 372132 [details] Patch for landing Clearing flags on attachment: 372132 Committed r246441: <https://trac.webkit.org/changeset/246441>
WebKit Commit Bot
Comment 7 2019-06-14 13:10:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.